# LLCSliceReversing

./: .gitmodules  README.md
aes_t_table/: .gitignore  Makefile  README.md  cacheutils.h  functions.h  spy.c
detect_function/: Makefile  main.c  utils.c  utils.h
drama_v_to_p/: .gitignore  CMakeLists.txt  README.md  eval.py
drama_v_to_p/include/: core-config.hpp  functions.h  pretty-print.hpp  ptedit_header.h  translation-oracle.hpp  utils.h
drama_v_to_p/src/: attack.c  cacheutils.h  core-config.cpp  main.cpp  slice-timing-oracle.cpp  stats.c  translation-oracle.cpp
measure_pattern/: .gitignore  Makefile  README.md  main.c  ptedit_header.h
non_linear_solve/: .gitignore  Readme.md  rev_mixer.py  slice_functions.py  upper_bits.py
non_linear_solve/pattern_lab73/: pattern_0.txt  pattern_16.txt  pattern_17.txt  pattern_18.txt  pattern_19.txt  pattern_20.txt  pattern_21.txt  pattern_22.txt  pattern_23.txt  pattern_24.txt  pattern_25.txt  pattern_26.txt  pattern_27.txt  pattern_28.txt  pattern_29.txt  pattern_30.txt  pattern_31.txt  pattern_32.txt  pattern_33.txt  pattern_34.txt  pattern_35.txt  pattern_36.txt
prime_probe/: .gitignore  Makefile  README.md  cacheutils.h  functions.h  main.c  multihist.h
realloc_spectre/: .Module.symvers.cmd  .modules.order.cmd  Makefile  README.md  attacker.c  common.h  shmem  victim.c
realloc_spectre/kernel_module/: Makefile  spectre_module.c  spectre_module.h
slice_functions/: README.md  slice_functions.h
v_to_p/: .gitignore  CMakeLists.txt  README.md
v_to_p/include/: core-config.hpp  pretty-print.hpp  ptedit_header.h  slice-timing-oracle.hpp  stats.h  translation-oracle.hpp
v_to_p/src/: core-config.cpp  functions.c  main.cpp  slice-timing-oracle.cpp  stats.c  translation-oracle.cpp  utils.c
